# screenvivid

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.rpm  LICENSE  README.md  delete_tags.sh  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deb-build.yml  linux-build.yml  macos-apple-sillicon-build.yml  macos-build.yml  macos-intel-only-build.yml  rpm-build.yml  windows-build.yml
dockerfiles/: Dockerfile.deb  Dockerfile.rpm
packaging/linux/: build-deb.sh  build-rpm.sh  screenvivid.spec
packaging/macos/: screenvivid.spec
packaging/windows/: screenvivid.iss  screenvivid.spec
screenvivid/: compile_resources.py  config.py  image_provider.py  main.py  model.py  rc_icons.py  rc_images.py  rc_main.py  transforms.py
screenvivid/models/: __init__.py  click_track.py  export.py  logger.py  screen_capture.py  screen_recorder.py  video_controller.py  window_controller.py
screenvivid/models/utils/: transforms.py
screenvivid/qml/components/: AnchorButton.qml  CustomButton.qml  GradientPreview.qml  ModeButton.qml  RecordButton.qml
screenvivid/qml/countdown/: Countdown.qml
screenvivid/qml/entry/: ControlPanel.qml  CustomSelector.qml  ScreenVivid.qml  main.qml
screenvivid/resources/: icons.qrc  images.qrc  main.qrc
screenvivid/utils/: cursor.py  general.py  logging.py
scripts/: create_cursor_images.py  create_offsets_file.py  install-linux.sh  install-macos.sh  read_hotspots.py  resize_ani_image_windows.py  run  uninstall-linux.sh  uninstall-macos.sh
(+27 files in other folders)
