[tool.poetry]
name = "screenvivid"
version = "1.1.0"
description = "A screen capture and automation tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "screenvivid"}]

[tool.poetry.dependencies]
python = "^3.9"
PySide6 = ">=6.7.2,<7.0"
opencv-python = ">=4.6.0,<=4.10.0.84"
Pillow = ">=7.0,<=10.4.0"
mss = ">=9.0.1,<10"
pyautogui = ">=0.9.54,<1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
screenvivid = "screenvivid.main:main"